--- a/SmokeTest/SmokeTest.csproj
+++ b/SmokeTest/SmokeTest.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="5.0.6" />
-    <ProjectReference Include="..\BasicFodyAddin\BasicFodyAddin.csproj" />
+    <ProjectReference Include="..\AutoPropertyChanged\AutoPropertyChanged.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <WeaverFiles Include="$(SolutionDir)BasicFodyAddin.Fody\bin\$(Configuration)\netstandard2.0\BasicFodyAddin.Fody.dll" />
+    <WeaverFiles Include="$(SolutionDir)AutoPropertyChanged.Fody\bin\$(Configuration)\netstandard2.0\AutoPropertyChanged.Fody.dll" />
   </ItemGroup>
 </Project>
