--- a/AutoPropertyChanged/AutoPropertyChanged.csproj
+++ b/AutoPropertyChanged/AutoPropertyChanged.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageOutputPath>$(SolutionDir)../nugets</PackageOutputPath>
   </PropertyGroup>
   <ItemGroup>
