--- a/AutoPropertyChanged/AutoPropertyChanged.csproj
+++ b/AutoPropertyChanged/AutoPropertyChanged.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageOutputPath>$(SolutionDir)/nugets</PackageOutputPath>
+    <Version>1.1.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="5.1.1" PrivateAssets="None" />
